--- a/Eksamen/index.html
+++ b/Eksamen/index.html
@@ -20,7 +20,12 @@
         <div class="nav container">
             <a href="" class="logo">Tøj og accessories webshop</a>
             <!-- Cart Icon -->
+            <div id="cart-box-section">
             <i class='bx bxs-shopping-bag' id="cart-icon"></i>
+            <div id="cart-icon-items">
+               <p id="cart-items">1</p> 
+            </div>
+            </div>
             <!-- Cart -->
             <div class="cart">
                 <h2 class="cart-title">Din Kurv</h2>
