--- a/Eksamen/index.html
+++ b/Eksamen/index.html
@@ -15,46 +15,38 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <!-- Nav -->
-        <div class="nav container">
-            <a href="" class="logo">Tøj og accessories webshop</a>
-            <!-- Cart Icon -->
-            <div id="cart-box-section">
+<!-- Header -->
+<header>
+    <!-- Nav -->
+    <div class="nav container">
+        <a href="" class="logo">Tøj og accessories webshop</a>
+        <!-- Cart Icon -->
+        <div id="cart-box-section">
             <i class='bx bxs-shopping-bag' id="cart-icon"></i>
             <div id="cart-icon-items">
-               <p id="cart-items">1</p> 
-            </div>
-            </div>
-            <!-- Cart -->
-            <div class="cart">
-                <h2 class="cart-title">Din Kurv</h2>
-                <!-- Content -->
-                <div class="cart-content">
-
-                    <cart class="cart-box">
-                        <img src="img/product2.jpg" alt="" class="cart-img">
-                        <div class="detail-box">
-                            <div class="cart-product-title">Høretelefoner</div>
-                            <div class="cart-price">799,00 kr</div>
-                            <input type="number" value="1" class="cart-quantity">
-                        </div>
-                        <!-- Remove Cart -->
-                        <i class='bx bxs-trash-alt cart-remove'></i>
-                    </cart>
-                </div>
-                <!-- Total -->
-                <div class="total">
-                    <div class="total-title">Total</div>
-                    <div class="total-price">0kr</div>
-                </div>
-                <!-- Buy Button -->
-                <button type="button" class="btn-buy">Køb Nu</button>
-                <!-- Cart Close -->
-                <i class='bx bx-x' id="close-cart"></i>
+                <p id="cart-items">1</p> 
             </div>
         </div>
-    </header>
+        <!-- Cart -->
+        <div class="cart">
+            <h2 class="cart-title">Din Kurv</h2>
+            <!-- Content -->
+            <div class="cart-content">
+
+            </div>
+            <!-- Total -->
+            <div class="total">
+                <div class="total-title">Total</div>
+                <div id="total-pris" class="total-price">0kr</div>
+            </div>
+            <!-- Buy Button -->
+            <button type="button" class="btn-buy">Køb Nu</button>
+            <!-- Cart Close -->
+            <i class='bx bx-x' id="close-cart"></i>
+        </div>
+    </div>
+</header>
+
     <!-- Shop -->
     <section class="shop container">
         <h2 class="section-title">Produkter</h2> 
